Fix btn-ghost appearance
Restore old hover background color with new css var (new has no contrast, seems like they got rid of the special var for it and use generic btn style?)

Fix slightly misaligned modal close button, button not completely round (issue from before tailwind v4)

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@
     --size-field: 0.3rem;
     --radius-box: 1rem;
     --radius-field: 0.5rem;
+    --btn-ghost-background: oklch(0.746477 0.0216 264.435964/.2);
     --color-primary: oklch(0.6569 0.196 275.75/1);
     --color-accent: oklch(0.7451 0.167 183.61/1);
     --color-neutral: oklch(0.313815 0.021108 254.139175/1);
@@ -43,6 +44,7 @@
     --size-field: 0.3rem;
     --radius-box: 1rem;
     --radius-field: 0.5rem;
+    --btn-ghost-background: oklch(0.278078 0.029596 256.847952/.2);
     --color-primary: oklch(0.4912 0.3096 275.75/1);
     --color-accent: oklch(0.7676 0.184 183.61/1);
     --color-base-100: #F2F2F2;
